fix sticky scrolling on mobile

--- a/web/assets/base.css
+++ b/web/assets/base.css
@@ -171,6 +171,7 @@ div, button, .button {
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
   text-shadow: 0 1px 1px #404040;
 }
 
